--- a/minecraft.html
+++ b/minecraft.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Pelea contra Sans</title>
   <style>
     body {
@@ -12,29 +12,29 @@
       font-family: Arial, sans-serif;
       text-align: center;
     }
-
+    #gameCanvas {
+      background-color: #111;
+      display: none;
+      margin: 20px auto;
+      border: 3px solid rgb(29, 155, 172);
+    }
     #hud {
       color: red;
       font-size: 20px;
       margin-top: 5px;
     }
-
     #faseDisplay {
       color: rgb(53, 17, 172);
       font-size: 22px;
-      margin-top: 10px;
-      border-style: dotted;
-      background-color: rgb(18, 9, 17);
-      border-color: aqua;
     }
-
-    #gameCanvas {
-      background-color: #1c1c1c;
-      border: 2px solid #00ffff;
-      margin-top: 20px;
-      display: none;
+    #startBtn, #victoryBtn, #retryBtn, #backBtn {
+      font-size: 20px;
+      padding: 10px 20px;
+      margin: 5px;
+      background-color: cyan;
+      border: none;
+      cursor: pointer;
     }
-
     #sansImage {
       width: 150px;
       height: 150px;
@@ -43,16 +43,6 @@
       border-radius: 30px;
       border: 3px solid rgb(29, 155, 172);
     }
-
-    button {
-      font-size: 16px;
-      margin: 5px;
-      padding: 10px 20px;
-      background-color: cyan;
-      border: none;
-      cursor: pointer;
-    }
-
     #victoria {
       display: none;
       font-size: 32px;
@@ -63,19 +53,15 @@
 </head>
 <body>
   <h1>¡Pelea contra Sans!</h1>
-
   <div id="victoria">🎉 <strong>¡Victoria!</strong> 🎉</div>
-
   <img id="sansImage" src="sans1.gif" alt="Sans">
   <div id="faseDisplay">Fase: 1</div>
   <canvas id="gameCanvas" width="600" height="400"></canvas>
   <div id="hud">❤️ HP: 100</div>
-
   <button id="startBtn">Comenzar</button>
   <button id="victoryBtn" style="display:none;" onclick="window.location.href='spotify_login.html'">Conectar con Spotify</button>
   <button id="retryBtn" style="display:none;" onclick="location.reload()">Reintentar</button>
   <button id="backBtn" style="display:none;" onclick="window.location.href='index.html'">Volver</button>
-
   <script>
     const canvas = document.getElementById("gameCanvas");
     const ctx = canvas.getContext("2d");
@@ -125,18 +111,8 @@
       sansImage.src = sansImages[phase] || sansImages.final;
     }
 
-    function checkCollision(bone, heart) {
-      return (
-        bone.x < heart.x + heart.size &&
-        bone.x + bone.width > heart.x - heart.size &&
-        bone.y < heart.y + heart.size &&
-        bone.y + bone.height > heart.y - heart.size
-      );
-    }
-
     function spawnBone() {
       if (!gameStarted) return;
-
       if (phase === 1) {
         bones.push({
           x: Math.random() * (canvas.width - 50),
@@ -145,6 +121,7 @@
           height: 50,
           speedY: 28,
           speedX: 2,
+          type: "vertical",
           phase
         });
         totalBones++;
@@ -161,6 +138,7 @@
           height: 50,
           speedX: fromLeft ? 28 : -28,
           speedY: 0,
+          type: "horizontal",
           phase
         });
         totalBones++;
@@ -172,17 +150,19 @@
         const gapIndex = Math.floor(Math.random() * 5);
         const rowHeight = canvas.height / 5;
         const marginY = 2;
+        const marginSides = 90;
         for (let i = 0; i < 5; i++) {
           if (i !== gapIndex) {
             bones.push({
-              x: canvas.width,
+              x: canvas.width + marginSides,
               y: i * rowHeight + marginY,
               width: 30,
               height: rowHeight - marginY * 2,
               speedX: -5,
               speedY: 0,
-              canDamage: true,
-              phase
+              type: "wall",
+              phase,
+              canDamage: true
             });
           }
         }
@@ -193,11 +173,19 @@
       }
     }
 
+    function checkCollision(bone, heart) {
+      return (
+        bone.x < heart.x + heart.size &&
+        bone.x + bone.width > heart.x - heart.size &&
+        bone.y < heart.y + heart.size &&
+        bone.y + bone.height > heart.y - heart.size
+      );
+    }
+
     function update() {
       const moveSpeed = 0.25;
       heart.x += (mouseX - heart.x) * moveSpeed;
       heart.y += (mouseY - heart.y) * moveSpeed;
-
       const now = Date.now();
       for (let bone of bones) {
         bone.x += bone.speedX || 0;
@@ -211,8 +199,8 @@
             hp -= 20;
             lastHitTime = now;
           }
-          if (hp < 0) hp = 0;
         }
+        if (hp < 0) hp = 0;
       }
 
       for (let i = bones.length - 1; i >= 0; i--) {
@@ -221,19 +209,10 @@
           bones.splice(i, 1);
         }
       }
-    }
 
-    function draw() {
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-      for (let bone of bones) {
-        const img = boneImgs[bone.phase];
-        ctx.drawImage(img, bone.x, bone.y, bone.width, bone.height);
-      }
-      ctx.drawImage(heartImg, heart.x - heart.size, heart.y - heart.size, heart.size * 2, heart.size * 2);
-    }
-
-    function checkFase() {
+      hud.innerHTML = "❤️ HP: " + hp;
       faseDisplay.textContent = "Fase: " + phase;
+
       if (phase === 3 && finalWaveReleased && bones.length === 0 && hp > 0) {
         gameOver = true;
         hud.style.display = "none";
@@ -253,8 +232,15 @@
         retryBtn.style.display = "inline-block";
         backBtn.style.display = "inline-block";
       }
+    }
 
-      hud.innerHTML = "❤️ HP: " + hp;
+    function draw() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      for (let bone of bones) {
+        const img = boneImgs[bone.phase];
+        ctx.drawImage(img, bone.x, bone.y, bone.width, bone.height);
+      }
+      ctx.drawImage(heartImg, heart.x - heart.size, heart.y - heart.size, heart.size * 2, heart.size * 2);
     }
 
     function gameLoop() {
@@ -262,7 +248,6 @@
       frame++;
       update();
       draw();
-      checkFase();
       requestAnimationFrame(gameLoop);
     }
 
@@ -282,8 +267,5 @@
   </script>
 </body>
 </html>
-
-
-
 
 
