--- a/minecraft.html
+++ b/minecraft.html
@@ -86,40 +86,69 @@
     const hpDisplay = document.getElementById("hp");
     const faseDisplay = document.getElementById("faseDisplay");
 
-    const imageFiles = [
-      { src: "ajolote.gif", x: 50, y: 60 },
-      { src: "cree.gif", x: 120, y: 60 },
-      { src: "esqueleto.jpg", x: 190, y: 60 },
-      { src: "gato2.gif", x: 260, y: 60 },
-      { src: "minecraft.gif", x: 330, y: 60 }
+    const player = {
+      x: canvas.width / 2 - 20,
+      y: canvas.height - 60,
+      width: 40,
+      height: 40,
+      img: new Image()
+    };
+    player.img.src = "corazon.jpg";
+
+    const enemyImages = [
+      "ajolote.gif",
+      "cree.gif",
+      "esqueleto.jpg",
+      "gato2.gif",
+      "minecraft.gif"
     ];
 
-    const enemies = [];
+    let enemies = [];
 
-    function loadEnemies() {
-      enemies.length = 0;
-      imageFiles.forEach((data, index) => {
-        const img = new Image();
-        img.src = data.src;
-        enemies.push({ img: img, x: data.x, y: data.y });
+    function spawnEnemies() {
+      enemies = [];
+      for (let i = 0; i < fase; i++) {
+        let img = new Image();
+        img.src = enemyImages[i];
+        enemies.push({
+          x: 50 + i * 80,
+          y: 10,
+          width: 50,
+          height: 50,
+          img: img,
+          speed: 1 + i * 0.3
+        });
+      }
+    }
+
+    function drawPlayer() {
+      ctx.drawImage(player.img, player.x, player.y, player.width, player.height);
+    }
+
+    function drawEnemies() {
+      enemies.forEach(enemy => {
+        ctx.drawImage(enemy.img, enemy.x, enemy.y, enemy.width, enemy.height);
       });
     }
 
-    function drawScene() {
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
+    function updateEnemies() {
+      enemies.forEach(enemy => {
+        enemy.y += enemy.speed;
 
-      // Dibujar enemigos según la fase
-      for (let i = 0; i < fase && i < enemies.length; i++) {
-        const enemy = enemies[i];
-        ctx.drawImage(enemy.img, enemy.x, enemy.y, 50, 50);
-      }
-
-      // Corazón en el centro
-      const heart = new Image();
-      heart.src = "corazon.jpg";
-      heart.onload = () => {
-        ctx.drawImage(heart, canvas.width / 2 - 20, canvas.height - 60, 40, 40);
-      };
+        // Detección de colisión con el corazón
+        if (
+          enemy.x < player.x + player.width &&
+          enemy.x + enemy.width > player.x &&
+          enemy.y < player.y + player.height &&
+          enemy.y + enemy.height > player.y
+        ) {
+          enemy.y = -100; // reiniciar posición
+          if (hp > 0) {
+            hp -= 10;
+            updateHUD();
+          }
+        }
+      });
     }
 
     function updateHUD() {
@@ -127,27 +156,33 @@
       hpDisplay.textContent = hp;
     }
 
-    // Avanzar de fase con tecla ESPACIO y reducir vida con tecla F
-    window.addEventListener("keydown", (e) => {
-      if (e.code === "Space") {
-        if (fase < imageFiles.length) {
-          fase++;
-          drawScene();
-          updateHUD();
-        }
-      }
+    function draw() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      drawPlayer();
+      drawEnemies();
+    }
 
-      if (e.key.toLowerCase() === "f") {
-        if (hp > 0) {
-          hp -= 10;
-          updateHUD();
-        }
+    function gameLoop() {
+      updateEnemies();
+      draw();
+      requestAnimationFrame(gameLoop);
+    }
+
+    // Subir de fase con ESPACIO
+    window.addEventListener("keydown", (e) => {
+      if (e.code === "Space" && fase < enemyImages.length) {
+        fase++;
+        spawnEnemies();
+        updateHUD();
       }
     });
 
-    loadEnemies();
-    drawScene();
+    // Inicializar juego
+    spawnEnemies();
     updateHUD();
+    player.img.onload = () => {
+      gameLoop();
+    };
   </script>
 </body>
 </html>
